[workspace]
members = [
    'common',
    'node',
    'pallets/poa',
    'pallets/poa/rpc',
    'pallets/token_migration',
    'pallets/democracy',
    'pallets/simple_democracy',
    'pallets/core_mods',
    'pallets/price_feed',
    'pallets/price_feed/rpc',
    'pallets/fiat_filter',
    'runtime',
]

[profile.release]
panic = 'unwind'
