[package]
authors = ['Dock.io']
build = 'build.rs'
edition = '2018'
name = 'dock-node'
version = '0.17.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
futures = '0.3.4'
log = '0.4.8'
parking_lot = '0.10.0'
hex-literal = "0.3.0"
jsonrpc-core = '15.1.0'
jsonrpc-pubsub = '15.1.0'
serde = { version = '1.0.110', features = ['derive'] }
serde_json = '1.0.41'

[dependencies.structopt]
version = '0.3.8'
optional = true

[dependencies.dock-runtime]
path = '../runtime'
version = '0.17.0'

[dependencies.sc-basic-authorship]
version = '0.9.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.sc-cli]
optional = true
version = '0.9.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.sc-finality-grandpa-warp-sync]
optional = true
version = '0.9.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.sc-client-api]
version = '3.0.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.sc-consensus]
version = '0.9.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"



[dependencies.sc-consensus-babe]
version = '0.9.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.sc-consensus-babe-rpc]
version = '0.9.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.sc-consensus-epochs]
version = '0.9.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.sc-consensus-slots]
version = '0.9.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.sc-executor]
version = '0.9.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.sc-finality-grandpa]
version = '0.9.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.sc-finality-grandpa-rpc]
version = '0.9.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.sc-network]
version = '0.9.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.sc-authority-discovery]
version = '0.9.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.sc-service]
version = '0.9.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.sc-transaction-pool]
version = '3.0.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.sc-telemetry]
version = '3.0.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.sc-sync-state-rpc]
version = '0.9.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.sp-authority-discovery]
version = '3.0.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.sp-core]
version = '3.0.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.sp-finality-grandpa]
version = '3.0.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.sp-consensus]
version = '0.9.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.sp-consensus-babe]
version = '0.9.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.sp-inherents]
version = '3.0.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.sp-runtime]
version = '3.0.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.sp-transaction-pool]
version = '3.0.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[build-dependencies.substrate-build-script-utils]
optional = true
version = '3.0.0'

[dependencies.sc-rpc]
version = '3.0.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.sc-rpc-api]
version = '0.9.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.sc-chain-spec]
version = '3.0.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.sp-api]
version = '3.0.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.sp-block-builder]
version = '3.0.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.sp-blockchain]
version = '3.0.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.sp-keystore]
version = '0.9.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.pallet-im-online]
default-features = false
version = '3.0.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.pallet-authority-discovery]
default-features = false
version = '3.0.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.node-inspect]
optional = true
version = '0.8.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.frame-benchmarking]
default-features = false
version = '3.0.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.frame-benchmarking-cli]
optional = true
default-features = false
version = '3.0.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.substrate-frame-rpc-system]
version = '3.0.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.pallet-transaction-payment-rpc]
version = '3.0.0'
git = 'https://github.com/paritytech/substrate.git'
branch = "frontier"

[dependencies.pallet-ethereum]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '5ced70c1b295b440941fa8b6653d40b34f59c4d3'
#path = '../../../frontier/frame/ethereum'

[dependencies.fc-rpc]
git = 'https://github.com/paritytech/frontier.git'
rev = '5ced70c1b295b440941fa8b6653d40b34f59c4d3'
#path = '../../../frontier/client/rpc'

[dependencies.fc-rpc-core]
git = 'https://github.com/paritytech/frontier.git'
rev = '5ced70c1b295b440941fa8b6653d40b34f59c4d3'
#path = '../../../frontier/client/rpc-core'

[dependencies.fp-rpc]
git = 'https://github.com/paritytech/frontier.git'
rev = '5ced70c1b295b440941fa8b6653d40b34f59c4d3'
#path = '../../../frontier/primitives/rpc'

[dependencies.fc-db]
git = 'https://github.com/paritytech/frontier.git'
rev = '5ced70c1b295b440941fa8b6653d40b34f59c4d3'
#path = '../../../frontier/client/db'

[dependencies.fc-mapping-sync]
git = 'https://github.com/paritytech/frontier.git'
rev = '5ced70c1b295b440941fa8b6653d40b34f59c4d3'
#path = '../../../frontier/client/db'

[dependencies.poa_rpc]
path = '../pallets/poa/rpc'
version = '0.1.0'

[dependencies.price_feed_rpc]
path = '../pallets/price_feed/rpc'
version = '0.0.1'

#[dependencies.fiat_filter_rpc]
#path = '../pallets/fiat_filter/rpc'
#version = '0.0.1'

[dependencies.staking_rewards_rpc]
path = '../pallets/staking_rewards/rpc'
version = '0.0.1'

[dependencies.core_mods_rpc]
path = '../pallets/core_mods/rpc'
version = '0.0.2'

[[bin]]
name = 'dock-node'
path = 'src/main.rs'

[features]
default = [ "cli" ]
cli = [
	"sc-executor/wasmi-errno",
	"node-inspect",
	"sc-cli",
	"frame-benchmarking-cli",
	"sc-service/db",
	"sc-finality-grandpa-warp-sync",
	"structopt",
	"substrate-build-script-utils",
]
wasmtime = [
	"sc-cli/wasmtime",
	"sc-executor/wasmtime",
	"sc-service/wasmtime",
	"frame-benchmarking-cli",
	"structopt",
	"substrate-build-script-utils",
]
runtime-benchmarks = [
	"dock-runtime/runtime-benchmarks",
	"frame-benchmarking-cli",
]
